--- a/corrida_maluca.css
+++ b/corrida_maluca.css
@@ -4,11 +4,19 @@
 }
 
 body{
-    background:url(./imagens/corrida_img01.jpg) no-repeat center top fixed;
+    background:url(./imagens/tema.jpeg) no-repeat center top fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+}
+
+.forms{
+    text-align: center;
+    font-optical-sizing:inherit;
+    color: white;
+    text-shadow: 0.2em 0.2em 0.3em white;
+    margin-top: 20px;
 }
 
 body .img{
@@ -18,6 +26,12 @@ body .img{
 h2{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 60px;
+    margin-top: 10px;
+    color: white;
+}
+
+p{
+    color: white;
 }
 
 .textos{
@@ -25,6 +39,12 @@ h2{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-shadow: 0.3em  0.3em 0.4em white;
 }
+
+.ptotal{
+    margin-top: 10px;
+    color: white;
+}
+
 
 .botoes{
     flex-direction: center;
